--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <a href="blog/entrada2.html" class="entrada-link">
           <h4>La importancia de los corredores ecológicos: Conectando ecosistemas para preservar la vida</h4>
           <p>Escrito el <span>22/10/2023</span></p>
-          <p class="sinapsis"> Descubre cómo TeraVida está trabajando en la creación de corredores ecológicos, conexiones vitales entre hábitats naturales, para facilitar el flujo de especies y garantizar la supervivencia de la vida silvestre.</p>
+          <p class="sinapsis"> Descubre cómo TerraVida está trabajando en la creación de corredores ecológicos, conexiones vitales entre hábitats naturales, para facilitar el flujo de especies y garantizar la supervivencia de la vida silvestre.</p>
         </a>
        </div>
         
